[gd_scene load_steps=5 format=3 uid="uid://dlvbphis7bpee"]

[ext_resource type="Script" path="res://MainScene.gd" id="1_polko"]
[ext_resource type="PackedScene" uid="uid://di5w7h3dmkkb6" path="res://Rocket.tscn" id="2_5m374"]
[ext_resource type="Script" path="res://Camera2D.gd" id="2_d64up"]
[ext_resource type="Texture2D" uid="uid://bstfcadtrpwn2" path="res://Global/sky_seamless_texture_5929.jpg" id="3_eaptd"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_polko")

[node name="UI" type="CanvasLayer" parent="."]

[node name="RequestButton" type="Button" parent="UI"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Request Data"

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Control" type="Control" parent="UI/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="FromPlanet" type="OptionButton" parent="UI/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ToPlanet" type="OptionButton" parent="UI/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GetTravelButton" type="Button" parent="UI/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Get Travel"

[node name="VSeparator" type="VSeparator" parent="UI/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="TravelStatusLabel" type="Label" parent="UI/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "No travel calculated"

[node name="StartSimButton" type="Button" parent="UI/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Start Simulation"

[node name="Control" type="Control" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="PanelContainer2" type="PanelContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Control" type="Control" parent="UI/VBoxContainer/PanelContainer2/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
text = "Sim speed"

[node name="SimSpeedSlider" type="HSlider" parent="UI/VBoxContainer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(196, 64)
layout_mode = 2
max_value = 365.0

[node name="SimSpeedLabel" type="Label" parent="UI/VBoxContainer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1.0"

[node name="VSeparator" type="VSeparator" parent="UI/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2

[node name="CurrentDayLabel" type="Label" parent="UI/VBoxContainer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Current Day: 1"

[node name="Planets" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Rocket" parent="." instance=ExtResource("2_5m374")]
unique_name_in_owner = true
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_d64up")

[node name="Parallax2D" type="Parallax2D" parent="."]
visible = false
scroll_scale = Vector2(0.01, 0.01)
repeat_size = Vector2(1000, 1000)
repeat_times = 3
follow_viewport = false

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
texture = ExtResource("3_eaptd")
